# MCES

./: Cargo.toml  README.md
C_Implementation/: BigCrush.txt  Dieharder.txt  Makefile  Practrand_1TB.txt  README.md  attacker.c  mces.c  mces.h  mces_bench_stream.c  mces_decrypt.c  mces_encrypt.c  mces_ers_tester.c  mces_make_nist_bins.c  mces_stream_dieharder.c  mces_test_harness.c  sequence_0_NIST.txt  sigilbook.py
C_Implementation/ARM64/: MCES.py  Makefile  README.md  blake3_dispatch.c  mces.c  mces.h  mces_bench_stream.c  mces_decrypt.c  mces_encrypt.c  mces_stream_dieharder.c  testresultsPi.txt
Documentation/: Speed_Tests.md  finalAnalysisReport.txt  instructions.md
Documentation_&_Testing/: README.md  finalAnalysisReport_100.txt  finalAnalysisReport_200.txt  oaind.txt
LeanMCES/: LeanMCES.lean  lakefile.toml
LeanMCES/LeanMCES/: Bit.lean  Crypto.lean  CryptoProps.lean  EtM.lean  Instances.lean  Keying.lean  MCES.lean  ReductionEtM.lean  Tests.lean  saoindad.txt
Service_Files/: install.sh  mces-folder-watcher  mces-vault-handler  mces-vault.desktop  mces-vault.xml  ram-runner.service  sarx-folder-watcher  sarx-vault-handler  sarx-vault.desktop  sarx-vault.xml  soiadnaso.txt
Src/: lib.rs  mces.rs
src/: headers.rs  lib.rs  mces.rs  sarx.rs  substrate_arx.rs
