[package]
name = "mces"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
blake3 = "1"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
subtle = "2"
zeroize = "1"
anyhow = "1"
thiserror = "1"
atty = "0.2"
rpassword = "7"
rayon = "1"
eframe = { version = "0.27", default-features = true, features = ["persistence"] }
egui = "0.27"
rfd = "0.14"
num_cpus = "1.16"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scrypt = "0.11"
unicode-normalization = "0.1"
whoami = "1"
chrono = "0.4"
libc = "0.2"
walkdir = "2"
dirs = "5"
percent-encoding = "2"
cfg-if = "1"   # <-- FOR PLATFORM SWITCHING
notify = "6"

[target.'cfg(not(any(target_arch = "wasm32", target_arch = "wasm64")))'.dependencies]
v4l = "0.14"
crossbeam-channel = "0.5"
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
cpal = "0.15"

[target.'cfg(windows)'.dependencies]
nokhwa = { version = "0.10", default-features = false, features = ["input-msmf"] }
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3